fixed stretching awards image bug by rotating the image 360 degrees in finder or photo viewer

--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap');
-
 body {
   overflow-x: hidden;
   background: #FFFFFF;
@@ -12,6 +10,7 @@ body {
   padding: .2rem;
   background: rgba(0, 0, 0, .8)!important;
   backdrop-filter: saturate(180%) blur(20px);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
 }
 .navbar-brand img {
   height: 1.2rem;
@@ -82,6 +81,10 @@ h4.subheading {
 .home-inner-fixed {
   background-image: url(images/quote_bg.jpg);
 }
+.highlight { 
+  font-weight: 400;
+  color: #2997ff;
+}
 
 /* Landing Page */
 .caption {
@@ -139,13 +142,14 @@ h4.subheading {
   background-color: #189582 ;
   border-color: #189582 ;
 }*/
-.about img {
+.about .image img {
   border-radius: 50%;
   width: 100%;
 }
-.about p {
-  padding-left: 2rem;
+.about .description {
+  padding-left: 3rem;
   font-size: 1.2rem;
+  font-weight: 300;
 }
 
 /* Projects */
@@ -256,6 +260,7 @@ h4.subheading {
   padding: 2rem;
   height: 100%;
   background: #FBFBFD;
+  font-weight: 300;
 }
 .talk h4 {
   margin-bottom: 1rem;
@@ -288,6 +293,7 @@ h4.subheading {
 .competition .description {
   padding: 2rem;
   background: #FBFBFD;
+  font-weight: 300;
 }
 .competition h4 {
   margin-bottom: 1rem;
@@ -302,10 +308,6 @@ h4.subheading {
 }
 .competition p {
   font-size: 1.2rem;
-}
-.competition p span {
-  font-weight: 700;
-  color: #2997ff;
 }
 
 /* Awards */
@@ -324,6 +326,7 @@ h4.subheading {
 .award .description {
   padding: 2rem;
   background: #FBFBFD;
+  font-weight: 300;
 }
 .award h4 {
   margin-bottom: 1rem;
@@ -338,10 +341,6 @@ h4.subheading {
 }
 .award p {
   font-size: 1.2rem;
-}
-.award p span {
-  font-weight: 700;
-  color: #2997ff;
 }
 
 /* Border */
